--- a/app/assets/styles/base.scss
+++ b/app/assets/styles/base.scss
@@ -1,22 +1,19 @@
-/* stylelint-disable property-no-vendor-prefix */
-
-/* 对 html 元素的初始化设定 */
-
 /*
-参考：https://github.com/unocss/unocss/blob/main/packages/reset/tailwind-compat.css
-
-Please read: https://github.com/unocss/unocss/blob/main/packages/reset/tailwind-compat.md
+Please read: https://github.com/unocss/unocss/blob/main/packages-presets/reset/tailwind-compat.md
 */
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
-2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
+2. Allow adding a border to an element by just adding a border-width.
+(https://github.com/tailwindcss/tailwindcss/pull/116)
+2. [UnoCSS]: allow to override the default border color with css var `--un-default-border-color`
 */
+
 *,
 ::before,
 ::after {
   box-sizing: border-box; /* 1 */
-  border-color: var(--el-border-color-light); /* 2 */
+  border-color: var(--un-default-border-color, #e5e7eb); /* 2 */
   border-style: solid; /* 2 */
   border-width: 0; /* 2 */
 }
@@ -26,58 +23,38 @@ Please read: https://github.com/unocss/unocss/blob/main/packages/reset/tailwind-
 2. Prevent adjustments of font size after orientation changes in iOS.
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
+5. Use the user's configured `sans` font-feature-settings by default.
+6. Use the user's configured `sans` font-variation-settings by default.
+7. Disable tap highlights on iOS.
 */
-html {
-  height: 100%;
 
-  // font-family: "Microsoft YaHei", PingFangSC, PingFangSC-Regular;
-
-  /* 4 */
+html,
+:host {
   font-family:
     ui-sans-serif,
     system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    "Helvetica Neue",
-    Arial,
-    "Noto Sans",
     sans-serif,
     "Apple Color Emoji",
     "Segoe UI Emoji",
     "Segoe UI Symbol",
-    "Noto Color Emoji";
+    "Noto Color Emoji"; /* 4 */
 
-  // 基准字体大小，用于控制 rem 和 px 的转换比例
-  font-size: 10px;
-
-  // 基准行高
-  line-height: 1.5; /* 1 */
-  -moz-tab-size: 4; /* 3 */
+  font-variation-settings: normal; /* 6 */
+  font-feature-settings: normal; /* 5 */
+  line-height: 1.5; /* 1 */ /* 3 */
   tab-size: 4; /* 3 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  text-size-adjust: 100%; /* 2 */
+  -webkit-tap-highlight-color: transparent; /* 7 */
 }
 
 /*
 1. Remove the margin in all browsers.
 2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
 */
+
 body {
-  height: 100%;
   margin: 0; /* 1 */
-  font-size: 14px;
   line-height: inherit; /* 2 */
-
-  // 设置默认文字色
-  color: var(--el-text-color-regular);
-
-  // 设置背景色
-  background-color: var(--el-bg-color-card);
-}
-
-#app {
-  height: 100%;
 }
 
 /*
@@ -85,6 +62,7 @@ body {
 2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
 3. Ensure horizontal rules are visible by default.
 */
+
 hr {
   height: 0; /* 1 */
   color: inherit; /* 2 */
@@ -94,36 +72,14 @@ hr {
 /*
 Add the correct text decoration in Chrome, Edge, and Safari.
 */
+
 abbr:where([title]) {
   text-decoration: underline dotted;
 }
 
 /*
-为标题设置初始字体大小
+Remove the default font size and weight for headings.
 */
-h1 {
-  font-size: var(--el-font-size-extra-large);
-}
-
-h2 {
-  font-size: var(--el-font-size-large);
-}
-
-h3 {
-  font-size: var(--el-font-size-medium);
-}
-
-h4 {
-  font-size: var(--el-font-size-base);
-}
-
-h5 {
-  font-size: var(--el-font-size-small);
-}
-
-h6 {
-  font-size: var(--el-font-size-extra-small);
-}
 
 h1,
 h2,
@@ -131,12 +87,220 @@ h3,
 h4,
 h5,
 h6 {
-  color: var(--el-text-color-primary);
+  font-size: inherit;
+  font-weight: inherit;
 }
 
 /*
-Removes the default spacing and border for appropriate elements.
+Reset links to optimize for opt-in styling instead of opt-out.
 */
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+/*
+Add the correct font weight in Edge and Safari.
+*/
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+/*
+1. Use the user's configured `mono` font-family by default.
+2. Use the user's configured `mono` font-feature-settings by default.
+3. Use the user's configured `mono` font-variation-settings by default.
+4. Correct the odd `em` font sizing in all browsers.
+*/
+
+code,
+kbd,
+samp,
+pre {
+  font-family:
+    ui-monospace,
+    SFMono-Regular,
+    Menlo,
+    Monaco,
+    Consolas,
+    "Liberation Mono",
+    "Courier New",
+    monospace; /* 1 */
+
+  font-size: 1em; /* 4 */
+  font-variation-settings: normal; /* 3 */
+  font-feature-settings: normal; /* 2 */
+}
+
+/*
+Add the correct font size in all browsers.
+*/
+
+small {
+  font-size: 80%;
+}
+
+/*
+Prevent `sub` and `sup` elements from affecting the line height in all browsers.
+*/
+
+sub,
+sup {
+  position: relative;
+  font-size: 75%;
+  line-height: 0;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/*
+1. Remove text indentation from table contents in Chrome and Safari.
+(https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
+2. Correct table border color inheritance in all Chrome and Safari.
+(https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
+3. Remove gaps between table borders by default.
+*/
+
+table {
+  text-indent: 0; /* 1 */
+  border-collapse: collapse; /* 3 */
+  border-color: inherit; /* 2 */
+}
+
+/*
+1. Change the font styles in all browsers.
+2. Remove the margin in Firefox and Safari.
+3. Remove default padding in all browsers.
+*/
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  padding: 0; /* 3 */
+  margin: 0; /* 2 */
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  font-variation-settings: inherit; /* 1 */
+  font-weight: inherit; /* 1 */
+  font-feature-settings: inherit; /* 1 */
+  line-height: inherit; /* 1 */
+  color: inherit; /* 1 */
+}
+
+/*
+Remove the inheritance of text transform in Edge and Firefox.
+*/
+
+button,
+select {
+  text-transform: none;
+}
+
+/*
+1. Correct the inability to style clickable types in iOS and Safari.
+2. Remove default button styles.
+*/
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  appearance: auto; /* 1 */
+
+  /* Will affect the button style of most component libraries, so disable it */
+
+  /* https://github.com/unocss/unocss/issues/2127 */
+
+  /* background-color: transparent; !* 2 *! */
+  background-image: none; /* 2 */
+}
+
+/*
+Use the modern Firefox focus style for all focusable elements.
+*/
+
+:-moz-focusring {
+  outline: auto;
+}
+
+/*
+Remove the additional `:invalid` styles in Firefox.
+(https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
+*/
+
+:-moz-ui-invalid {
+  box-shadow: none;
+}
+
+/*
+Add the correct vertical alignment in Chrome and Firefox.
+*/
+
+progress {
+  vertical-align: baseline;
+}
+
+/*
+Correct the cursor style of increment and decrement buttons in Safari.
+*/
+
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/*
+1. Correct the odd appearance in Chrome and Safari.
+2. Correct the outline style in Safari.
+*/
+
+[type="search"] {
+  appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/*
+Remove the inner padding in Chrome and Safari on macOS.
+*/
+
+::-webkit-search-decoration {
+  appearance: none;
+}
+
+/*
+1. Correct the inability to style clickable types in iOS and Safari.
+2. Change font properties to `inherit` in Safari.
+*/
+
+::-webkit-file-upload-button {
+  font: inherit; /* 2 */
+  appearance: auto; /* 1 */
+}
+
+/*
+Add the correct display in Chrome and Safari.
+*/
+
+summary {
+  display: list-item;
+}
+
+/*
+Removes the default spacing for appropriate elements.
+*/
+
 blockquote,
 dl,
 dd,
@@ -170,183 +334,14 @@ menu {
   list-style: none;
 }
 
-/*
-Reset links to optimize for opt-in styling instead of opt-out.
-*/
-a {
-  color: var(--el-color-info);
-  text-decoration: inherit;
-}
-
-/*
-Add the correct font weight in Edge and Safari.
-*/
-b,
-strong {
-  font-weight: bolder;
-}
-
-/*
-Add the correct font size in all browsers.
-*/
-small {
-  font-size: 80%;
-}
-
-/*
-1. Use the user's configured `mono` font family by default.
-2. Correct the odd `em` font sizing in all browsers.
-*/
-code,
-kbd,
-samp,
-pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/*
-Prevent `sub` and `sup` elements from affecting the line height in all browsers.
-*/
-sub,
-sup {
-  position: relative;
-  font-size: 75%;
-  line-height: 0;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/*
-1. Remove text indentation from table contents in Chrome and Safari.
-(https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
-2. Correct table border color inheritance in all Chrome and Safari.
-(https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
-3. Remove gaps between table borders by default.
-*/
-table {
-  text-indent: 0; /* 1 */
-  border-collapse: collapse; /* 3 */
-  border-color: inherit; /* 2 */
-}
-
-/*
-1. Change the font styles in all browsers.
-2. Remove the margin in Firefox and Safari.
-3. Remove default padding in all browsers.
-*/
-button,
-input,
-optgroup,
-select,
-textarea {
-  padding: 0; /* 3 */
-  margin: 0; /* 2 */
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  font-weight: inherit; /* 1 */
-  line-height: inherit; /* 1 */
-  color: inherit; /* 1 */
-}
-
-/*
-Remove the inheritance of text transform in Edge and Firefox.
-*/
-button,
-select {
-  text-transform: none;
-}
-
-/*
-1. Correct the inability to style clickable types in iOS and Safari.
-2. Remove default button styles.
-*/
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button; /* 1 */
-
-  /* will affect the button style of most component libraries, so disable it */
-
-  /* https://github.com/unocss/unocss/issues/2127 */
-
-  /* background-color: transparent; !* 2 *! */
-  background-image: none; /* 2 */
-}
-
-/*
-Use the modern Firefox focus style for all focusable elements.
-*/
-:-moz-focusring {
-  outline: auto;
-}
-
-/*
-Remove the additional `:invalid` styles in Firefox.
-(https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
-*/
-:-moz-ui-invalid {
-  box-shadow: none;
-}
-
-/*
-Add the correct vertical alignment in Chrome and Firefox.
-*/
-progress {
-  vertical-align: baseline;
-}
-
-/*
-Correct the cursor style of increment and decrement buttons in Safari.
-*/
-::-webkit-inner-spin-button,
-::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/*
-1. Correct the odd appearance in Chrome and Safari.
-2. Correct the outline style in Safari.
-*/
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/*
-Remove the inner padding in Chrome and Safari on macOS.
-*/
-::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/*
-1. Correct the inability to style clickable types in iOS and Safari.
-2. Change font properties to `inherit` in Safari.
-*/
-::-webkit-file-upload-button {
-  font: inherit; /* 2 */
-  -webkit-appearance: button; /* 1 */
-}
-
-/*
-Add the correct display in Chrome and Safari.
-*/
-summary {
-  display: list-item;
+dialog {
+  padding: 0;
 }
 
 /*
 Prevent resizing textareas horizontally by default.
 */
+
 textarea {
   resize: vertical;
 }
@@ -355,6 +350,7 @@ textarea {
 1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
+
 input::placeholder,
 textarea::placeholder {
   color: #9ca3af; /* 2 */
@@ -364,6 +360,7 @@ textarea::placeholder {
 /*
 Set the default cursor for buttons.
 */
+
 button,
 [role="button"] {
   cursor: pointer;
@@ -372,16 +369,20 @@ button,
 /*
 Make sure disabled buttons don't get the pointer cursor.
 */
+
 :disabled {
   cursor: default;
 }
 
 /*
 1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
-2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
+2. Add `vertical-align: middle` to align replaced elements more sensibly by default.
+(https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
    This can trigger a poorly considered lint error in some tools but is included by design.
 */
+
 img,
+svg,
 video,
 canvas,
 audio,
@@ -393,57 +394,20 @@ object {
 }
 
 /*
-Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
+Constrain images and videos to the parent width and preserve their intrinsic aspect ratio.
+(https://github.com/mozdevs/cssremedy/issues/14)
 */
+
 img,
 video {
   max-width: 100%;
   height: auto;
 }
 
-// img prefer `display: inline-block`. (https://github.com/mozdevs/cssremedy/issues/14)
-img {
-  display: inline-block;
-}
-
-/* Make elements with the HTML hidden attribute stay hidden by default */
-[hidden] {
-  display: none;
-}
-
-/* 下面开始声明自定义的基础样式 */
-
-/* 去除 ul li 前面的圆点 */
-li,
-ul {
-  list-style: none;
-}
-
-/* i 一般用来显示 icon，默认为行内块级元素，可以设置宽高 */
-i {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-/* 滚动条样式修改 */
-::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
 /*
-::-webkit-scrollbar-track {
-  background-color: var(--el-color-white);
-  border-radius: 3px;
-  box-shadow: inset 0 0 5px rgb(0 0 0 / 20%);
-}
+Make elements with the HTML hidden attribute stay hidden by default.
 */
 
-::-webkit-scrollbar-thumb {
-  background-color: var(--el-text-color-disabled);
-  border-radius: 3px;
-
-  &:hover {
-    background: var(--el-text-color-placeholder);
-  }
+[hidden]:where(:not([hidden="until-found"])) {
+  display: none;
 }
